qp-pf-console/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qp-pf-console-ingress
  namespace: test
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: pf-console.sihai.com                           ##虚拟主机名称
    http:
      paths:
      - path: /
        backend:
          serviceName: qp-pf-console
          servicePort: 9000
